BugFix UGP-9959 fixing overall spacing and responsive issues

--- a/blocks/article-metadata-appliesto/article-metadata-appliesto.css
+++ b/blocks/article-metadata-appliesto/article-metadata-appliesto.css
@@ -1,13 +1,15 @@
 .article-metadata-appliesto ul {
   list-style: none;
-  margin: 4px 0;
-  margin-left: 0;
+  margin: 5px 0;
 }
 
 .article-metadata-appliesto li {
   display: inline-block;
-  margin-top: unset;
   font-size: var(--spectrum-font-size-100);
+}
+
+.article-metadata-appliesto ul > li {
+  margin: 0;
 }
 
 .article-metadata-appliesto li + li:not(:last-child)::after {
