--- a/blocks/article-metadata-createdby/article-metadata-createdby.css
+++ b/blocks/article-metadata-createdby/article-metadata-createdby.css
@@ -1,13 +1,9 @@
 .article-metadata-createdby > div > div {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .article-metadata-createdby ul {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 4px;
   margin: 0;
 }
 
@@ -42,6 +38,7 @@
   padding-right: 4px;
   padding-left: 0;
   margin-bottom: 0;
+  margin-top: 0;
   color: var(--non-spectrum-grey);
 }
 
@@ -55,10 +52,4 @@
     flex-direction: row;
     align-items: center;
   }
-}
-
-.article-metadata-container .article-metadata-createdby-wrapper {
-  border-bottom: 1px solid var(--non-spectrurm-whisper-gray);
-  padding-bottom: 38px;
-  margin-bottom: 32px;
 }
